# WiLidar

./: .gitignore  Dockerfile  README.md  csi_simulator.py  docker-compose.yml  floorplan.js  founder-footer-template.html  founder-footer.css  index.html  pyproject.toml  requirements.txt  streamlit_app.py  style.css  waveform.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy-pages.yml  docker-publish.yml
calibration/: calibrate.py
docs/: calibration_guide.md  hardware_placement.md
docs/evaluation/: ablation_report.md
docs/report/: technical_report.tex
hardware/: flash_guide.md
hardware/esp32s3/: CMakeLists.txt  sdkconfig.defaults
hardware/esp32s3/main/: CMakeLists.txt  config.h  csi_collector.c  csi_tasks.h  csi_types.h  processing_task.c  status_task.c  wifi_task.c
server/: requirements.txt
server/api/: main.py
server/collector/: labeler.py  udp_receiver.py
server/config/: config.yaml
server/models/: models.py  trainer.py
server/processing/: features.py  filters.py  pipeline.py
server/utils/: backup.py  config.py  device_scanner.py  logger.py
tests/evaluation/: run_ablation.py
tests/integration/: test_api_presence_endpoint.py  test_node_dropout.py  test_redis_memory_bounds.py  test_simulation.py  test_udp_to_redis.py  test_websocket_latency.py
tests/unit/: test_crc32.py  test_filters.py  test_pipeline.py
tools/: simulate_csi.py  verify_hardware.py
