[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wilidar"
version = "0.1.0"
description = "WiLidar: Real-Time WiFi CSI Sensing Framework & Interactive Spatial Sandbox"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Sai Teja Bandaru", email = "saitejabandaru.in@gmail.com" }
]
keywords = [
  "wifi csi",
  "channel state information",
  "spatial sensing",
  "presence detection",
  "indoor localization",
  "esp32",
  "iot"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: System :: Networking"
]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.28.0",
  "redis>=5.0.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
  "xgboost>=1.7.0",
  "torch>=2.0.0",
  "streamlit>=1.30.0",
  "python-dotenv>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/saitejabandaru-in/WiLidar"
Repository = "https://github.com/saitejabandaru-in/WiLidar"
Issues = "https://github.com/saitejabandaru-in/WiLidar/issues"
